armado de la estructura para la app

--- a/Ejercicio-6-A.html
+++ b/Ejercicio-6-A.html
@@ -8,7 +8,15 @@
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
 </head>
 <body>
+    <form>
+        <label>Ingrese la cantidad de familiares que tienen <input type="number" id="cantidad-familiares"/></label>
+        <button type="submit" id="siguiente">Siguiente</button><br>    
         
+        <button type="submit" id="calcular">Calcular</button>
+
+        <button type="reset">Empezar de nuevo</button>
+    </form>
+    
 
 
     <script src='Ejercicio-6-A.js'></script>
