--- a/Ejercicio-6-A.html
+++ b/Ejercicio-6-A.html
@@ -19,7 +19,11 @@
         </form>
     </header>
     <main>
-        
+        <p>
+            La mayor edad del grupo familiar es <em id="mayor-edad"></em><br>
+            La menor edad del grupo familiar es <em id="menor-edad"></em><br>
+            El promedio de edad del grupo familiar es <em id="promedio-edad"></em><br>
+        </p>
     </main>
 
     <footer>
