agrega el boton 'empezar de nuevo'

--- a/Ejercicio-6-A.html
+++ b/Ejercicio-6-A.html
@@ -14,7 +14,7 @@
         
             <button type="submit" id="calcular">Calcular</button>
 
-            <button type="reset">Empezar de nuevo</button>
+            <button type="reset" id="resetear">Empezar de nuevo</button>
         </form>
     </header>
     <main>
