--- a/index.html
+++ b/index.html
@@ -1,34 +1,54 @@
 <!DOCTYPE html>
 <html lang="es-ARG">
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>6A Ejercicio</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-</head>
-<body>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>6B Ejercicio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      type="description"
+      content="TAREA:Crear una interfaz que permita agregar ó quitar
+    (botones agregar y quitar) inputs+labels para completar el salario anual de cada integrante
+    de la familia que trabaje. Al hacer click en calcular, mostrar en un elemento pre-existente 
+    el mayor salario anual, menor salario anual, salario anual promedio y salario mensual promedio.
+    Punto bonus: si hay inputs vacíos, ignorarlos en el cálculo (no contarlos como 0)."
+    />
+    <link rel="stylesheet" type="text/css" href="ejercicio-6B.css" />
+  </head>
+  <body>
     <header>
-        <form>
-            <label>Ingrese la cantidad de familiares que tienen <input type="number" id="cantidad-familiares"/></label>
-            <button type="submit" id="siguiente">Siguiente</button><br>    
-        
-            <button type="submit" id="calcular">Calcular</button>
-
-            <button type="reset" id="resetear">Empezar de nuevo</button>
-        </form>
+      <h1>Escriba el salario anual de cada integrante de su familia</h1>
+      <h3>Agregue cuantos casilleros necesite!</h3>
     </header>
     <main>
-        <p>
-            La mayor edad del grupo familiar es <em id="mayor-edad"></em><br>
-            La menor edad del grupo familiar es <em id="menor-edad"></em><br>
-            El promedio de edad del grupo familiar es <em id="promedio-edad"></em><br>
+      <form id="formulario-ingreso-salarios">
+        <button type="button" id="agregar-casillero-salario">
+          Agregar casillero
+        </button>
+        <input
+          type="number"
+          id="salario-integrante-uno"
+          placeholder="Ingrese su salario Aqui"
+          class="salario"
+        />
+        <button type="button" id="eliminar-casillero-salario">
+          Eliminar casillero</button
+        ><br />
+      </form>
+      <div>
+        <p id="datos" hidden>
+          El Mayor salario anual es: <b id="mayor-salario"></b><br />
+          El Menor salario anual es: <b id="menor-salario"></b><br />
+          El salario Anual promedio es: <b id="salario-anual-promedio"></b
+          ><br />
+          El salario Mensual promedio es: <b id="salario-mensual-promedio"></b
+          ><br />
         </p>
+      </div>
     </main>
-
     <footer>
-
+      <button type="button" id="calcular">Calcular</button>
     </footer>
-
-    <script src='ejercicio-6-A.js'></script>
-</body>
+    <script src="ejercicio-6B.js"></script>
+  </body>
 </html>
