crea el archivo para realizar las pruebas y corrige error por el cual no iba a cargar al script de pruebas

--- a/Ejercicio-6-A.html
+++ b/Ejercicio-6-A.html
@@ -30,5 +30,6 @@
     </footer>
 
     <script src='Ejercicio-6-A.js'></script>
+    <script src='pruebas-ejercicio-6.js'></script>
 </body>
 </html>
