asocia html al archivo pruebas para empezar a trabajar con el mismo

--- a/index.html
+++ b/index.html
@@ -50,5 +50,7 @@
       <button type="button" id="calcular">Calcular</button>
     </footer>
     <script src="ejercicio-6B.js"></script>
+    <script src="pruebas-6b-refactorizado.js"></script>
+
   </body>
 </html>
