agrega 0 como valor por default para facilitar la operacion de calculo

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           id="salario-integrante-uno"
           placeholder="Ingrese su salario Aqui"
           class="salario"
+          value="0"
         />
         <button type="button" id="eliminar-casillero-salario">
           Eliminar casillero</button
