corrige errores de escritura, agrega campo para marcar error en el primer input

--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
     </header>
     <main>
       <form id="formulario-ingreso-salarios">
+        <b class="oculto" id="error-en-negrita-salario-integrante-1"></b><br>
         <button type="button" id="agregar-casillero-salario">
-          Agregar casillero
-        </button>
+          Agregar 1 casillero mas</button>
         <input
           type="number"
-          id="salario-integrante-uno"
+          id="salario-integrante-1"
           placeholder="Ingrese su salario Aqui"
           class="salario"
           value="0"
         />
         <button type="button" id="eliminar-casillero-salario">
-          Eliminar casillero</button
+          Eliminar ultimo casillero</button
         ><br />
       </form>
       <div>
