agrega bootstrap para dar estilos

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     el mayor salario anual, menor salario anual, salario anual promedio y salario mensual promedio.
     Punto bonus: si hay inputs vacíos, ignorarlos en el cálculo (no contarlos como 0)."
     />
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="ejercicio-6B.css" />
   </head>
   <body>
